# acidica

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
src/acidic/: __init__.py  acidic.py  parser.py  program.py  tokens.py
src/acidica/: exceptions.py  inout.py  interpreter.py  main.py  parser.py  program.py  tokens.py
tests/: test_programs.py  test_tokens.py
tests/examples/: amazing.in  amazing.out  diamond.out  math.out  ned.in  ned.out  stars.in  stars.out  strings.in  strings.out
