[project]
name = "acidica"
version = "0.1.0"
description = "An implementation of Vintage BASIC"
readme = "README.rst"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pytest>=9.1.1",
    "ty>=0.0.58",
]

[project.scripts]
acidica = "acidica.main:main"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing default cases that are never meant to happen.
    "case NEVER:",
]

[tool.coverage.run]
source = ["src", "tests"]
